--- a/main.css
+++ b/main.css
@@ -1,3 +1,31 @@
+/* GitHub Flavoured Markdown */
+
+.markdown-body h1 {
+  margin-top: 24px;
+  margin-bottom: 16px;
+}
+.markdown-body h2 {
+  margin-top: 22px;
+  margin-bottom: 14px;
+}
+.markdown-body h3 {
+  margin-top: 20px;
+  margin-bottom: 12px;
+}
+.markdown-body h4 {
+  margin-top: 18px;
+  margin-bottom: 10px;
+}
+.markdown-body h5 {
+  margin-top: 16px;
+  margin-bottom: 8px;
+}
+.markdown-body h6 {
+  margin-top: 14px;
+  margin-bottom: 6px;
+}
+
+
 /* Font Awesome */
 
 .fa, .fab, .fad, .fal, .far, .fas {
